--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Jingwen Blog
 SEOTitle: 景闻的博客 | Jingwen Blog
 header-img: img/home-bg.jpg
 email: jingwen.ywb@gmail.com
-description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
+description: "关于程序与设计、黑客与画家，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 景闻 的个人博客，与你一起发现更大的世界。"
 keyword: "hadoop,hive,pig,spark,storm,flink,java,python"
 url: "https://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -79,7 +79,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
-sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/jingwen.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
